WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103527
Regression(
r135962
): m_pendingSyncBackingStores needs to be cleared in LayerTreeRenderer::purgeGLResources()
https://bugs.webkit.org/show_bug.cgi?id=103527
Summary
Regression(r135962): m_pendingSyncBackingStores needs to be cleared in LayerT...
Chris Dumez
Reported
2012-11-28 07:39:04 PST
We currently don't clear m_pendingSyncBackingStores in LayerTreeRenderer::purgeGLResources(), which means that we may try to assign backing stores to layers after TextureMapperLayer::clearBackingStoresRecursive() has been called.
Attachments
Patch
(1.54 KB, patch)
2012-11-28 07:41 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-11-28 07:41:56 PST
Created
attachment 176485
[details]
Patch
WebKit Review Bot
Comment 2
2012-11-28 08:55:06 PST
Comment on
attachment 176485
[details]
Patch Clearing flags on attachment: 176485 Committed
r136016
: <
http://trac.webkit.org/changeset/136016
>
WebKit Review Bot
Comment 3
2012-11-28 08:55:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug